refactor(config): configure spring.mail and resilience4j for SMTP
- Add spring.mail.* properties for Gmail SMTP
- Add mail.from custom property
- Update retry exceptions to Spring Mail types in dev/prod

--- a/src/main/resources/resilience4j/resilience4j-dev.yml
+++ b/src/main/resources/resilience4j/resilience4j-dev.yml
@@ -9,6 +9,21 @@ resilience4j:
         permittedNumberOfCallsInHalfOpenState: 3
         eventConsumerBufferSize: 10
         registerHealthIndicator: true
+  
+  retry:
+    instances:
+      emailSend:
+        maxAttempts: 3
+        waitDuration: 1s
+        exponentialBackoffMultiplier: 2
+        enableExponentialBackoff: true
+        retryExceptions:
+          - org.springframework.mail.MailSendException
+          - java.net.SocketTimeoutException
+          - java.net.ConnectException
+          - jakarta.mail.MessagingException
+        ignoreExceptions:
+          - org.springframework.mail.MailAuthenticationException
 
   ratelimiter:
     instances:
