--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,13 +35,24 @@ spring:
         index-type: HNSW
         distance-type: COSINE_DISTANCE
         dimensions: 1536
-  # AWS SES Configuration
-aws:
-  ses:
-    region: ${AWS_REGION}
-    source-email: ${AWS_SES_SOURCE_EMAIL}
-    access-key: ${AWS_ACCESS_KEY_ID}
-    secret-key: ${AWS_SECRET_ACCESS_KEY}
+  # Spring Mail (Google SMTP)
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: ${MAIL_SMTP_AUTH:true}
+          starttls:
+            enable: ${MAIL_SMTP_STARTTLS:true}
+          connectiontimeout: ${MAIL_SMTP_CONNECTION_TIMEOUT:5000}
+          timeout: ${MAIL_SMTP_TIMEOUT:5000}
+          writetimeout: ${MAIL_SMTP_WRITETIMEOUT:5000}
+
+mail:
+  from: ${MAIL_FROM}
 
 management:
   health:
