--- a/src/main/resources/resilience4j/resilience4j-prod.yml
+++ b/src/main/resources/resilience4j/resilience4j-prod.yml
@@ -10,6 +10,21 @@ resilience4j:
         eventConsumerBufferSize: 10
         registerHealthIndicator: true
 
+  retry:
+    instances:
+      emailSend:
+        maxAttempts: 3
+        waitDuration: 1s
+        exponentialBackoffMultiplier: 2
+        enableExponentialBackoff: true
+        retryExceptions:
+          - org.springframework.mail.MailSendException
+          - java.net.SocketTimeoutException
+          - java.net.ConnectException
+          - jakarta.mail.MessagingException
+        ignoreExceptions:
+          - org.springframework.mail.MailAuthenticationException
+
   ratelimiter:
     instances:
       # Auth
