chore(docker): replace AWS env vars with MAIL_* variables
- Remove AWS_REGION, AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY
- Add MAIL_USERNAME, MAIL_PASSWORD, MAIL_FROM

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,16 @@ APP_ADMIN_USERNAME=
 APP_ADMIN_EMAIL=
 APP_ADMIN_PASSWORD=
 
+# Mail
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM=
+MAIL_SMTP_CONNECTION_TIMEOUT=5000
+MAIL_SMTP_TIMEOUT=5000
+MAIL_SMTP_WRITETIMEOUT=5000
+MAIL_SMTP_AUTH=true
+MAIL_SMTP_STARTTLS=true
+
 # PayOS Configuration
 PAYOS_CLIENT_ID=
 PAYOS_API_KEY=
@@ -55,10 +65,3 @@ KAFKA_UI_PASSWORD=
 # Elasticsearch
 ELASTICSEARCH_URI=
 APP_ELASTICSEARCH_AUTO_REINDEX=true
-
-# AWS
-# SES
-AWS_REGION=
-AWS_SES_SOURCE_EMAIL=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
