--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -37,11 +37,10 @@ services:
       - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
       - CLOUDINARY_FOLDER=${CLOUDINARY_FOLDER}
 
-      # --- AWS SES ---
-      - AWS_REGION=${AWS_REGION:-ap-southeast-1}
-      - AWS_SES_SOURCE_EMAIL=${AWS_SES_SOURCE_EMAIL:-no-reply@per.io.vn}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      # --- SMTP Mail ---
+      - MAIL_USERNAME=${MAIL_USERNAME}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_FROM=${MAIL_FROM}
 
       # --- CORS & App URLs ---
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
@@ -71,13 +70,6 @@ services:
       - APP_ADMIN_USERNAME=${APP_ADMIN_USERNAME}
       - APP_ADMIN_EMAIL=${APP_ADMIN_EMAIL}
       - APP_ADMIN_PASSWORD=${APP_ADMIN_PASSWORD}
-
-      # AWS
-      # SES
-      - AWS_REGION=${AWS_REGION}
-      - AWS_SES_SOURCE_EMAIL=${AWS_SES_SOURCE_EMAIL}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     ports:
       - "8080:8080"
     networks:
