--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,10 +27,9 @@ services:
       - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
       - CLOUDINARY_FOLDER=${CLOUDINARY_FOLDER}
 
-      - AWS_REGION=${AWS_REGION:-ap-southeast-1}
-      - AWS_SES_SOURCE_EMAIL=${AWS_SES_SOURCE_EMAIL:-no-reply@per.io.vn}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - MAIL_USERNAME=${MAIL_USERNAME}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_FROM=${MAIL_FROM}
 
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
       - APP_BASE_URL=${APP_BASE_URL}
@@ -53,11 +52,6 @@ services:
       - APP_ADMIN_USERNAME=${APP_ADMIN_USERNAME}
       - APP_ADMIN_EMAIL=${APP_ADMIN_EMAIL}
       - APP_ADMIN_PASSWORD=${APP_ADMIN_PASSWORD}
-
-      - AWS_REGION=${AWS_REGION}
-      - AWS_SES_SOURCE_EMAIL=${AWS_SES_SOURCE_EMAIL}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     volumes:
       - ./knowledge:/app/knowledge:ro
 
