refactor(rag): migrate vector store implementation to qdrant

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ DB_PASSWORD=
 REDIS_HOST=
 REDIS_PORT=
 
+# Qdrant
+QDRANT_HOST=
+QDRANT_PORT=
+QDRANT_COLLECTION=
+
 # JWT
 JWT_SECRET=
 ACCESS_TOKEN_TTL=PT15M
