--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,3 +71,16 @@ management:
 
 server:
   port: ${SERVER_PORT:8080}
+
+app:
+  rag:
+    auto-index: ${APP_RAG_AUTO_INDEX:true}
+    chat-model: ${OPENAI_CHAT_MODEL:gpt-3.5-turbo}
+    search-top-k: ${RAG_SEARCH_TOP_K:3}
+    similarity-threshold: ${RAG_SIMILARITY_THRESHOLD:0.3}
+    qdrant:
+      collections:
+        product: ${QDRANT_COLLECTION_PRODUCT:product_vectors}
+        brand: ${QDRANT_COLLECTION_BRAND:brand_vectors}
+        category: ${QDRANT_COLLECTION_CATEGORY:category_vectors}
+        knowledge: ${QDRANT_COLLECTION_KNOWLEDGE:knowledge_vectors}
