docs(rag): update documentation and remove legacy pgvector migration

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,10 @@ REDIS_PORT=
 # Qdrant
 QDRANT_HOST=
 QDRANT_PORT=
-QDRANT_COLLECTION=
+QDRANT_COLLECTION=product_vectors
+QDRANT_COLLECTION_PRODUCT=product_vectors
+QDRANT_COLLECTION_BRAND=brand_vectors
+QDRANT_COLLECTION_CATEGORY=category_vectors
 
 # JWT
 JWT_SECRET=
