--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_KAFKACONNECT_0_NAME: debezium
-      KAFKA_CLUSTERS_0_KAFKACONNECT_0_ADDRESS: http://kafka-connect:8083
+      KAFKA_CLUSTERS_0_KAFKACONNECT_0_ADDRESS: http://debezium-kafka-connect:8083
     depends_on:
       - kafka
       - debezium-kafka-connect
@@ -113,6 +113,27 @@ services:
       KAFKA_CONNECT_URIS: http://debezium-kafka-connect:8083
     depends_on:
       - debezium-kafka-connect
+
+  # Init container for auto-registering Debezium connector
+  init-kafka-connect:
+    image: alpine:3.19
+    container_name: init-kafka-connect
+    networks:
+      - per-network
+    volumes:
+      - ./debezium/connector-postgres.json:/config/connector-postgres.json:ro
+      - ./debezium/init-connector.sh:/init/init-connector.sh:ro
+    environment:
+      KAFKA_CONNECT_URL: http://debezium-kafka-connect:8083
+      CONNECTOR_CONFIG: /config/connector-postgres.json
+      MAX_RETRIES: 60
+      RETRY_INTERVAL: 5
+    command: >
+      sh -c "apk add --no-cache curl jq bash && bash /init/init-connector.sh"
+    depends_on:
+      debezium-kafka-connect:
+        condition: service_healthy
+    restart: "no"
 
   prometheus:
     image: prom/prometheus:latest
