docs: update .env.example with new docker compose variables

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
-﻿# Database (PostgreSQL)
-DB_URL=
-DB_USERNAME=
-DB_PASSWORD=
+﻿# PostgreSQL
+POSTGRES_URL=jdbc:postgresql://postgres:5432/postgres
+POSTGRES_DB=postgres
+POSTGRES_USER=per
+POSTGRES_PASSWORD=
 
 # Redis
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=redis
+REDIS_PORT=6379
 
 # Qdrant
-QDRANT_HOST=
-QDRANT_PORT=
+QDRANT_HOST=qdrant
+QDRANT_PORT=6334
 QDRANT_COLLECTION=product_vectors
 QDRANT_COLLECTION_PRODUCT=product_vectors
 QDRANT_COLLECTION_BRAND=brand_vectors
@@ -25,13 +26,14 @@ JWT_ISSUER=auth-service
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+CLOUDINARY_FOLDER=per/uploads
 
 # Server & App
 SERVER_PORT=8080
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
-APP_BASE_URL=http://localhost:8080
-APP_ADMIN_USERNAME=
-APP_ADMIN_EMAIL=
+CORS_ALLOWED_ORIGINS=https://nguyenminh.space,https://www.nguyenminh.space
+APP_BASE_URL=https://nguyenminh.space
+APP_ADMIN_USERNAME=admin
+APP_ADMIN_EMAIL=admin@example.com
 APP_ADMIN_PASSWORD=
 
 # Mail
@@ -44,32 +46,31 @@ MAIL_SMTP_WRITETIMEOUT=5000
 MAIL_SMTP_AUTH=true
 MAIL_SMTP_STARTTLS=true
 
-# PayOS Configuration
-PAYOS_CLIENT_ID=
-PAYOS_API_KEY=
-PAYOS_CHECKSUM_KEY=
-PAYOS_RETURN_URL=http://localhost:3000/payment/success
-PAYOS_CANCEL_URL=http://localhost:3000/payment/cancel
+# PayOS
+PAY_OS_CLIENT_ID=
+PAY_OS_API_KEY=
+PAY_OS_CHECKSUM_KEY=
 
 # Docker
 DOCKER_USERNAME=
-DOCKER_APP=
-DOCKER_APP_VERSION=
+DOCKER_APP=per
+DOCKER_APP_VERSION=latest
 
 # Kafka
-KAFKA_BOOTSTRAP_SERVERS=localhost:29092
+KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
 # RAG
 OPENAI_API_KEY=
-OPENAI_CHAT_MODEL=gpt-4o  # or gpt-3.5-turbo
+OPENAI_CHAT_MODEL=gpt-4o
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 RAG_SEARCH_TOP_K=5
 RAG_SIMILARITY_THRESHOLD=0.3
 
 # Kafka UI
-KAFKA_UI_USERNAME=
+KAFKA_UI_USERNAME=admin
 KAFKA_UI_PASSWORD=
 
 # Elasticsearch
-ELASTICSEARCH_URI=
+ELASTICSEARCH_ENABLED=true
+ELASTICSEARCH_URI=http://elasticsearch:9200
 APP_ELASTICSEARCH_AUTO_REINDEX=true
