refactor(infra): containerize `init-kafka-connect` service with a new Dockerfile

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -200,13 +200,12 @@ services:
       - debezium-kafka-connect
 
   init-kafka-connect:
-    image: alpine:3.19
+    build:
+      context: ./debezium
+    image: per-init-connector:latest
     container_name: init-kafka-connect
     networks:
       - per-network
-    volumes:
-      - ./debezium/connector-postgres.json:/config/connector-postgres.json:ro
-      - ./debezium/init-connector.sh:/init/init-connector.sh:ro
     environment:
       KAFKA_CONNECT_URL: http://debezium-kafka-connect:8083
       CONNECTOR_CONFIG: /config/connector-postgres.json
@@ -215,8 +214,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    command: >
-      sh -c "apk add --no-cache curl jq bash gettext && bash /init/init-connector.sh"
+
     depends_on:
       debezium-kafka-connect:
         condition: service_healthy
