--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -162,6 +162,7 @@ services:
     container_name: debezium-kafka-connect
     ports:
       - "127.0.0.1:8083:8083"
+      - "127.0.0.1:8778:8778"
     networks:
       - per-network
     environment:
@@ -175,8 +176,8 @@ services:
       STATUS_STORAGE_REPLICATION_FACTOR: 1
       KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      KEY_CONVERTER_SCHEMAS_ENABLE: "false"
       VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
+      ENABLE_JOLOKIA: "true"
     depends_on:
       - kafka
       - db
