--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -132,7 +132,7 @@ services:
     volumes:
       - kafka_data:/var/lib/kafka/data
     healthcheck:
-      test: [ "CMD-SHELL", "kafka-broker-api-versions --bootstrap-server localhost:9092 || exit 1" ]
+      test: [ "CMD-SHELL", "kafka-broker-api-versions --bootstrap-server localhost:29092 || exit 1" ]
       interval: 15s
       timeout: 10s
       retries: 5
@@ -179,8 +179,10 @@ services:
       VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
       ENABLE_JOLOKIA: "true"
     depends_on:
-      - kafka
-      - db
+      kafka:
+        condition: service_healthy
+      db:
+        condition: service_healthy
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8083/connectors" ]
       interval: 30s
