--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     image: redis:7-alpine
     container_name: redis
     restart: always
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
     ports:
       - "6379:6379"
     networks:
@@ -207,7 +208,7 @@ services:
   redis-exporter:
     image: oliver006/redis_exporter
     container_name: redis-exporter
-    command: -redis.addr redis://redis:6379
+    command: -redis.addr redis://:${REDIS_PASSWORD}@redis:6379
     ports:
       - "9121:9121"
     networks:
