--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -103,6 +103,7 @@ services:
     image: redis:7-alpine
     container_name: redis
     restart: unless-stopped
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
     ports:
       - "6379:6379"
     networks:
@@ -206,7 +207,7 @@ services:
   redis-exporter:
     image: oliver006/redis_exporter
     container_name: redis-exporter
-    command: -redis.addr redis://redis:6379
+    command: -redis.addr redis://:${REDIS_PASSWORD}@redis:6379
     ports:
       - "9121:9121"
     networks:
