chore(docker): add REDIS_PASSWORD environment variable to Docker Compose configurations

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,7 @@ services:
       # --- Redis ---
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
 
       # --- Qdrant ---
       - QDRANT_HOST=${QDRANT_HOST}
